[gd_scene load_steps=4 format=2]

[ext_resource path="res://Shared/theme.tres" type="Theme" id=1]
[ext_resource path="res://Boat/BoatDisplay.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="BoatDisplay" type="Panel"]
margin_right = 100.0
margin_bottom = 60.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="HullBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
step = 1.0

[node name="SailBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 23.0
margin_right = 100.0
margin_bottom = 37.0
step = 1.0

[node name="CannonBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 100.0
margin_bottom = 55.0
step = 1.0
